--- a/.github/workflows/PTVS-daily.yml
+++ b/.github/workflows/PTVS-daily.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           repository: 'microsoft/PTVS'
           githubToken: ${{ secrets.PAT }}
-          reportPath: .
+          reportPath: PTVS
           team: '+fabioz,luabud,ijoosong,heejaechang,zooba,brettcannon,kieferrm,ronglums,DonJayamanne,kimadeline,int19h,gramster,qubitron,rchiodo,greazer,ericsnowcurrently,judej,paulacamargo25,bschnurr,karthiknadig,JoshuaPartlow,AdamYoblick,karrtikr,StellaHuang95'
         
