--- a/.github/workflows/debugpy-weekly.yml
+++ b/.github/workflows/debugpy-weekly.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           repository: 'microsoft/debugpy'
           githubToken: ${{ secrets.PAT }}
-          reportPath: .
+          reportPath: debugpy
           reportNameTemplate: 'fullreport.md'
           all: true
           team: '+fabioz,luabud,ijoosong,heejaechang,zooba,brettcannon,kieferrm,ronglums,DonJayamanne,kimadeline,int19h,gramster,qubitron,rchiodo,greazer,ericsnowcurrently,judej,paulacamargo25,bschnurr,karthiknadig,JoshuaPartlow,AdamYoblick,karrtikr,StellaHuang95'
