--- a/.github/workflows/pylance-weekly.yml
+++ b/.github/workflows/pylance-weekly.yml
@@ -20,7 +20,7 @@ jobs:
           repository: 'microsoft/pylance-release'
           githubToken: ${{ secrets.PAT }}
           reportNameTemplate: 'fullreport.md'
-          reportPath: .
+          reportPath: pylance
           all: true
           team: '+savannahostrowski,luabud,ijoosong,heejaechang,zooba,brettcannon,kieferrm,ronglums,DonJayamanne,kimadeline,int19h,gramster,qubitron,rchiodo,greazer,ericsnowcurrently,judej,paulacamargo25,bschnurr,karthiknadig,JoshuaPartlow,AdamYoblick,karrtikr,StellaHuang95'
   
