--- a/.github/workflows/pylance-weekly.yml
+++ b/.github/workflows/pylance-weekly.yml
@@ -2,7 +2,7 @@ name: 'Generate Weekly Full Report for pylance'
 
 on:
   schedule:
-    - cron: 7 * * * 1    
+    - cron: * 7 * * 1    
   workflow_dispatch:
   
 permissions:
