Add Eric and Jake.

--- a/.github/workflows/pylance-daily.yml
+++ b/.github/workflows/pylance-daily.yml
@@ -20,6 +20,6 @@ jobs:
           repository: 'microsoft/pylance-release'
           githubToken: ${{ secrets.PAT }}
           reportPath: pylance
-          team: '+savannahostrowski,luabud,ijoosong,heejaechang,zooba,brettcannon,kieferrm,ronglums,DonJayamanne,kimadeline,int19h,gramster,qubitron,rchiodo,greazer,ericsnowcurrently,judej,paulacamargo25,bschnurr,karthiknadig,JoshuaPartlow,AdamYoblick,karrtikr,StellaHuang95'
+          team: '+erictraut,jakebailey,savannahostrowski,luabud,ijoosong,heejaechang,zooba,brettcannon,kieferrm,ronglums,DonJayamanne,kimadeline,int19h,gramster,qubitron,rchiodo,greazer,ericsnowcurrently,judej,paulacamargo25,bschnurr,karthiknadig,JoshuaPartlow,AdamYoblick,karrtikr,StellaHuang95'
  
 
