--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ runs:
   using: "composite"
   steps:
     - name: Set environment
-      run |
+      run: |
         echo "TEAM='AdamYoblick,AlexanderSher,Anapo14,CTrando,Cameron,DavidKutu,DonJayamanne,IanMatthewHuff,JakeRadMSFT,JiayuanL,JoshuaPartlow,LittleLittleCloud,MikhailArkhipov,MinKPark,RaymonGulati1,SiddhanthUnnithan,StellaHuang95,akashraju4,amunger,anopo4,ayim,binderjoe,brettcannon,brianbok,bschnurr,claudiaregio,d3r3kk,debonte,ericsnowcurrently,erictraut,fabioz,gilbertw,gramster,greazer,gvanrossum,heejaechang,huguesv,ijoosong,int19h,jakebailey,jflam,jmew,joyceerhl,judej,karrtikr,karthiknadig,kawilkin,kieferrm,kimadeline,luabud,minsa110,paulacamargo25,qubitron,rchiodo,ronglums,savannahostrowski,sevillal,shsuman,smortaz,swinner95,tbombach,vsfeedback,weidezhong-msft,xiaofeng0123,zewditu,zhouwangyang,zooba'" >> $GITHUB_ENV
         echo -n "REPO=microsoft/" >> $GITHUB_ENV
         echo ${{ inputs.repository }} >> $GITHUB_ENV
