Added reports for Jupyter and PVSC. Changed to use action.yml throughout. Use full team setting.

--- a/.github/workflows/PTVS-daily.yml
+++ b/.github/workflows/PTVS-daily.yml
@@ -15,10 +15,8 @@ jobs:
     timeout-minutes: 10
     steps:
       - id: report
-        uses: gramster/github-issue-reporter@main
+        uses: gramster/python-reports@main
         with:
-          repository: 'microsoft/PTVS'
+          repository: 'PTVS'
           githubToken: ${{ secrets.PAT }}
-          reportPath: PTVS
-          team: '+fabioz,luabud,ijoosong,heejaechang,zooba,brettcannon,kieferrm,ronglums,DonJayamanne,kimadeline,int19h,gramster,qubitron,rchiodo,greazer,ericsnowcurrently,judej,paulacamargo25,bschnurr,karthiknadig,JoshuaPartlow,AdamYoblick,karrtikr,StellaHuang95'
         
