--- a/.github/workflows/pvsc-weekly.yml
+++ b/.github/workflows/pvsc-weekly.yml
@@ -1,8 +1,8 @@
-name: 'Generate Daily Report for debugpy'
+name: 'Generate Weekly Report for PVSC'
 
 on:
   schedule:
-    - cron: 30 6 * * *    
+    - cron: 0 3 * * 1    
   workflow_dispatch:
   
 permissions:
@@ -17,6 +17,7 @@ jobs:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'debugpy'
+          repository: 'vscode-python'
           githubToken: ${{ secrets.PAT }}
+          weekly: true
         
