Add count as PVSC times out

--- a/.github/workflows/pvsc-daily.yml
+++ b/.github/workflows/pvsc-daily.yml
@@ -19,4 +19,5 @@ jobs:
         with:
           repository: 'vscode-python'
           githubToken: ${{ secrets.PAT }}
+          count: 15
         
