--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: "Whether to generate a weekly report (else daily)."
     required: false
     default: false
+  count:
+    description: "Batch size for calls to Github API.i Use if jobs are failing due to timeouts."
+    required: false
+    default: 25
 
 runs:
   using: "composite"
@@ -34,6 +38,7 @@ runs:
         reportPath: ${{ inputs.repository }}
         all: true
         team: ${{ env.TEAM }}
+        count: ${{ inputs.count }}
     - name: Generate limited report
       if: inputs.weekly != 'true'
       uses: gramster/github-issue-reporter@main
@@ -42,3 +47,4 @@ runs:
         githubToken: ${{ inputs.githubToken }}
         reportPath: ${{ inputs.repository }}
         team: ${{ env.TEAM }}
+        count: ${{ inputs.count }}
