--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ inputs:
   count:
     description: "Batch size for calls to Github API.i Use if jobs are failing due to timeouts."
     required: false
-    default: 25
+    default: '25'
 
 runs:
   using: "composite"
