--- a/action.yml
+++ b/action.yml
@@ -8,8 +8,7 @@ inputs:
     required: true
   githubToken:
     description: "The Github token or PAT token (preferred) for API access."
-    required: false
-    default: ${{ secrets.GITHUB_TOKEN }}
+    required: true
   weekly:
     description: "Whether to generate a weekly report (else daily)."
     required: false
