--- a/.github/workflows/stubs-weekly.yml
+++ b/.github/workflows/stubs-weekly.yml
@@ -15,3 +15,4 @@ jobs:
         with:
           repository: 'python-type-stubs'
           weekly: true
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
