--- a/.github/workflows/jupyter-daily.yml
+++ b/.github/workflows/jupyter-daily.yml
@@ -1,8 +1,8 @@
 name: 'Generate Daily Report for jupyter'
 
 on:
-  schedule:
-    - cron: 30 4 * * *    
+#  schedule:
+#    - cron: 30 4 * * *    
   workflow_dispatch:
   
 permissions:
