--- a/.github/workflows/pvsc-daily.yml
+++ b/.github/workflows/pvsc-daily.yml
@@ -1,8 +1,8 @@
 name: 'Generate Daily Report for PVSC'
 
 on:
-  schedule:
-    - cron: 30 3 * * *    
+#  schedule:
+#    - cron: 30 3 * * *    
   workflow_dispatch:
   
 permissions:
