--- a/.github/workflows/pylance-weekly.yml
+++ b/.github/workflows/pylance-weekly.yml
@@ -18,6 +18,7 @@ jobs:
         uses: gramster/python-reports@main
         with:
           repository: 'pylance-release'
+          prs: 'pyrx'          
           githubToken: ${{ secrets.PAT }}
           weekly: true
         
