--- a/.github/workflows/PTVS-weekly.yml
+++ b/.github/workflows/PTVS-weekly.yml
@@ -20,4 +20,4 @@ jobs:
           repository: 'PTVS'
           githubToken: ${{ secrets.PAT }}
           weekly: true
-        
+          hotspots: true
