--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,10 @@ inputs:
     description: "The GitHub code repository to generate the report for, if different to issues."
     required: false
     default: ''
+  team:
+    description: "Comma-separated list of GitHub user names of the core team for this repo."
+    required: false
+    default: ''    
   githubToken:
     description: "The Github token or PAT token (preferred) for API access."
     required: true
@@ -27,7 +31,9 @@ runs:
   steps:
     - name: Set environment
       run: |
-        echo "TEAM='KacieKK,AdamYoblick,AlexanderSher,Anapo14,CTrando,Cameron,DavidKutu,DonJayamanne,IanMatthewHuff,JakeRadMSFT,JiayuanL,JoshuaPartlow,LittleLittleCloud,MikhailArkhipov,MinKPark,RaymonGulati1,SiddhanthUnnithan,StellaHuang95,akashraju4,amunger,anopo4,ayim,binderjoe,brettcannon,brianbok,bschnurr,claudiaregio,d3r3kk,debonte,ericsnowcurrently,erictraut,fabioz,gilbertw,gramster,greazer,gvanrossum,heejaechang,huguesv,ijoosong,int19h,jakebailey,jflam,jmew,joyceerhl,judej,karrtikr,karthiknadig,kawilkin,kieferrm,kimadeline,luabud,minsa110,paulacamargo25,qubitron,rchiodo,ronglums,savannahostrowski,sevillal,shsuman,smortaz,swinner95,tbombach,vsfeedback,weidezhong-msft,xiaofeng0123,zewditu,zhouwangyang,zooba'" >> $GITHUB_ENV
+        echo -n "TEAM='" >> $GITHUB_ENV
+        echo -n ${{ inputs.team }} >> $GITHUB_ENV    
+        echo "'" >> $GITHUB_ENV
         echo -n "REPO='microsoft/" >> $GITHUB_ENV
         echo -n ${{ inputs.repository }} >> $GITHUB_ENV
         echo "'" >> $GITHUB_ENV
