--- a/.github/workflows/jupyter-weekly.yml
+++ b/.github/workflows/jupyter-weekly.yml
@@ -1,8 +1,8 @@
 name: 'Generate Weekly Report for jupyter'
 
 on:
-  schedule:
-    - cron: 0 4 * * 1    
+  #schedule:
+  #  - cron: 0 4 * * 1    
   workflow_dispatch:
   
 permissions:
