--- a/.github/workflows/pvsc-weekly.yml
+++ b/.github/workflows/pvsc-weekly.yml
@@ -1,8 +1,8 @@
 name: 'Generate Weekly Report for PVSC'
 
 on:
-  schedule:
-    - cron: 0 3 * * 1    
+  #schedule:
+  #  - cron: 0 3 * * 1    
   workflow_dispatch:
   
 permissions:
