--- a/.github/workflows/stubs-weekly.yml
+++ b/.github/workflows/stubs-weekly.yml
@@ -1,8 +1,8 @@
 name: 'Generate Weekly Full Report for python-type-stubs'
 
 on:
-  schedule:
-    - cron: 0 10 * * 1    
+  #schedule:
+  #  - cron: 0 10 * * 1    
   workflow_dispatch:
 
 jobs:
