--- a/.github/workflows/isort-daily.yml
+++ b/.github/workflows/isort-daily.yml
@@ -17,7 +17,7 @@ jobs:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'vcode-isort'
+          repository: 'vscode-isort'
           githubTokenRead: ${{ secrets.READ }}
           githubTokenCommit: ${{ secrets.COMMIT }}          
           # Clean this up
