Fix repository name in mypy weekly workflow

--- a/.github/workflows/mypy-weekly.yml
+++ b/.github/workflows/mypy-weekly.yml
@@ -17,7 +17,7 @@ jobs:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'vscode-mpy'
+          repository: 'vscode-mypy'
           githubTokenRead: ${{ secrets.READ }}
           githubTokenCommit: ${{ secrets.COMMIT }}
           weekly: true
