--- a/.github/workflows/00-00 autopep8-weekly.yml
+++ b/.github/workflows/00-00 autopep8-weekly.yml
@@ -1,8 +1,8 @@
-name: 'Generate Daily Report for PVSC'
+name: 'Generate Weekly Full Report for autopep8'
 
 on:
-#  schedule:
-#    - cron: 30 3 * * *    
+  schedule:
+    - cron: 0 0 * * 1    
   workflow_dispatch:
   
 permissions:
@@ -11,15 +11,17 @@ permissions:
 
 jobs:
   report:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     steps:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'vscode-python'
-          githubToken: ${{ secrets.PAT }}
-          count: 15
+          repository: 'vscode-autopep8'
+          githubTokenRead: ${{ secrets.READ }}
+          githubTokenCommit: ${{ secrets.COMMIT }}
+          weekly: true
+          hotspots: true   
           # Clean this up
           team: 'KacieKK,AdamYoblick,AlexanderSher,Anapo14,CTrando,Cameron,DavidKutu,DonJayamanne,IanMatthewHuff,JakeRadMSFT,JiayuanL,JoshuaPartlow,LittleLittleCloud,MikhailArkhipov,MinKPark,RaymonGulati1,SiddhanthUnnithan,StellaHuang95,akashraju4,amunger,anopo4,ayim,binderjoe,brettcannon,brianbok,bschnurr,claudiaregio,d3r3kk,debonte,ericsnowcurrently,erictraut,fabioz,gilbertw,gramster,greazer,gvanrossum,heejaechang,huguesv,ijoosong,int19h,jakebailey,jflam,jmew,joyceerhl,judej,karrtikr,karthiknadig,kawilkin,kieferrm,kimadeline,luabud,minsa110,paulacamargo25,qubitron,rchiodo,ronglums,savannahostrowski,sevillal,shsuman,smortaz,swinner95,tbombach,vsfeedback,weidezhong-msft,xiaofeng0123,zewditu,zhouwangyang,zooba'
-                
+        
