--- a/.github/workflows/01-00 mypy-weekly.yml
+++ b/.github/workflows/01-00 mypy-weekly.yml
@@ -1,8 +1,8 @@
-name: 'Generate Weekly Full Report for vscode-black'
+name: 'Generate Weekly Full Report for vscode-mypy'
 
 on:
   schedule:
-    - cron: 0 5 * * 1    
+    - cron: 0 1 * * 1    
   workflow_dispatch:
   
 permissions:
@@ -17,7 +17,7 @@ jobs:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'vscode-black'
+          repository: 'vscode-mypy'
           githubTokenRead: ${{ secrets.READ }}
           githubTokenCommit: ${{ secrets.COMMIT }}
           weekly: true
