--- a/.github/workflows/05-40 isort-daily.yml
+++ b/.github/workflows/05-40 isort-daily.yml
@@ -1,8 +1,8 @@
-name: 'Generate Daily Report for vscode-python-tools-extension-template'
+name: 'Generate Daily Report for vscode-isort'
 
 on:
   schedule:
-    - cron: 30 5 * * *    
+    - cron: 40 5 * * *    
   workflow_dispatch:
   
 permissions:
@@ -17,7 +17,7 @@ jobs:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'vscode-python-tools-extension-template'
+          repository: 'vscode-isort'
           githubTokenRead: ${{ secrets.READ }}
           githubTokenCommit: ${{ secrets.COMMIT }}          
           # Clean this up
