--- a/.github/workflows/06-50 sarif-tools-daily.yml
+++ b/.github/workflows/06-50 sarif-tools-daily.yml
@@ -1,8 +1,8 @@
-name: 'Generate Weekly Report for jupyter'
+name: 'Generate Daily Report for sarif-tools'
 
 on:
-  #schedule:
-  #  - cron: 0 4 * * 1    
+  schedule:
+    - cron: 50 6 * * *    
   workflow_dispatch:
   
 permissions:
@@ -11,15 +11,15 @@ permissions:
 
 jobs:
   report:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     steps:
       - id: report
         uses: gramster/python-reports@main
         with:
-          repository: 'vscode-jupyter'
-          githubToken: ${{ secrets.PAT }}
-          weekly: true
+          repository: 'sarif-tools'
+          githubTokenRead: ${{ secrets.READ }}
+          githubTokenCommit: ${{ secrets.COMMIT }}          
           # Clean this up
           team: 'KacieKK,AdamYoblick,AlexanderSher,Anapo14,CTrando,Cameron,DavidKutu,DonJayamanne,IanMatthewHuff,JakeRadMSFT,JiayuanL,JoshuaPartlow,LittleLittleCloud,MikhailArkhipov,MinKPark,RaymonGulati1,SiddhanthUnnithan,StellaHuang95,akashraju4,amunger,anopo4,ayim,binderjoe,brettcannon,brianbok,bschnurr,claudiaregio,d3r3kk,debonte,ericsnowcurrently,erictraut,fabioz,gilbertw,gramster,greazer,gvanrossum,heejaechang,huguesv,ijoosong,int19h,jakebailey,jflam,jmew,joyceerhl,judej,karrtikr,karthiknadig,kawilkin,kieferrm,kimadeline,luabud,minsa110,paulacamargo25,qubitron,rchiodo,ronglums,savannahostrowski,sevillal,shsuman,smortaz,swinner95,tbombach,vsfeedback,weidezhong-msft,xiaofeng0123,zewditu,zhouwangyang,zooba'
-                
+        
